# ug-office-ai

./: .env.example  .gitignore  CLAUDE.md  claude_desktop_config.example.json  snapshot-odds.txt
.github/skills/ug-office/: browser.md
.github/skills/ug-office/operations/: settlement.md  tickets.md  winloss.md
mcp/: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  check_yesterday_winloss.py  docker-compose.yml  pyproject.toml
mcp/.github/workflows/: ci.yml  docker-publish.yml
mcp/data/: user_registry.example.json
mcp/src/discovery/: api_interceptor.py  crawler.py  generate_api_map.py
mcp/src/server/: auth.py  browser_store.py  client.py  main.py  models.py  oauth_models.py  oauth_provider.py  prompts.py  resources.py  session_store.py  socketio_client.py  user_registry.py
mcp/src/server/tools/: __init__.py  _helpers.py  browser.py  members.py  operators.py  reports.py  settlement.py  sports.py  system.py  tickets.py
mcp/tests/: conftest.py  test_browser_store.py  test_browser_tools.py  test_client.py  test_oauth.py  test_session_store.py  test_user_registry.py
skill/: SKILL.md  ugoffice.md
skill/operations/: odds.md  winloss.md
